--- a/src/pages/storelist/storelist.html
+++ b/src/pages/storelist/storelist.html
@@ -3,12 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
-    <ion-buttons end>
-    <button ion-button item-right (click)="logout()">
-      <ion-icon name="log-out"></ion-icon>
-    </button>
-  </ion-buttons>
+    <ion-title>მაღაზიების სრული სია</ion-title>
   </ion-navbar>
 </ion-header>
 
