--- a/src/pages/show-store/show-store.html
+++ b/src/pages/show-store/show-store.html
@@ -16,17 +16,11 @@
 <ion-content padding>
   <ion-card>
 
-  <img src="{{data.img}}">
-  <ion-fab right top>
-    <button ion-fab>
-      <ion-icon name="pin"></ion-icon>
-    </button>
-  </ion-fab>
 
   <ion-item>
-    <ion-icon ios="ios-appstore" md="md-appstore" item-start large></ion-icon>
+    <ion-icon ios="ios-albums-outline" md="ios-albums-outline" item-start large></ion-icon>
     <h2>{{data.name}}</h2>
-    <p>11 N. Way St, Madison, WI 53703</p>
+
   </ion-item>
 
   <ion-item>
@@ -40,14 +34,15 @@
 
   </ion-item>
   <ion-item>
-    <span item-left>18 min</span>
-    <span item-left>(2.6 mi)</span>
-    <button ion-button icon-left clear item-end>
-      <ion-icon name="navigate"></ion-icon>
-      Start
-    </button>
-  </ion-item>
+    <ion-icon name="ios-stats-outline" item-left large ></ion-icon>
+    <h2>{{data.score}}</h2>
 
+  </ion-item>
+  <ion-item>
+     <ion-icon ios="ios-add" md="md-add" item-left large></ion-icon>
+    <h2>{{data.update}}</h2>
+
+  </ion-item>
 </ion-card>
 
 </ion-content>
