--- a/src/pages/storelist/storelist.html
+++ b/src/pages/storelist/storelist.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>მაღაზიების სრული სია</ion-title>
+    <ion-title>List</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -13,8 +13,8 @@
     {{s.name}}
     </ion-card-header>
     <ion-card-content>
-      <p>  თარიღი: <span text-right>{{s.date}}</span></p>
-      <p>  შემოწმება: <span text-right>{{s.check}}</span> </p>
+      <p>  Date: <span text-right>{{s.date}}</span></p>
+      <p>  User: <span text-right>{{s.check}}</span> </p>
     </ion-card-content>
   </ion-card>
 
