--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
 
-    <ion-title>ავტორიზაცია</ion-title>
+    <ion-title>Login</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -9,15 +9,15 @@
   <ion-list>
 
     <ion-item>
-      <ion-label floating>მომხმარებელი</ion-label>
+      <ion-label floating>Username</ion-label>
       <ion-input type="text" [(ngModel)]="username"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label floating>პაროლი</ion-label>
+      <ion-label floating>password</ion-label>
       <ion-input type="password" [(ngModel)]="password"></ion-input>
     </ion-item>
-    <button ion-button full (click)="auth()">ავტორიზაცია</button>
+    <button ion-button full (click)="auth()">login</button>
   </ion-list>
 
 
